# book-talk

./: .gitignore  README.md  pyproject.toml
src/: app.py  llama_pipeline.py
